--- a/src/mail/mail-templates/activation.hbs
+++ b/src/mail/mail-templates/activation.hbs
@@ -22,9 +22,9 @@
             </td>
         </tr>
         <tr>
-            <td style="text-align:center">
-                <a href="{{url}}"
-                    style="display:inline-block;padding:20px;background:#00838f;text-decoration:none;color:#ffffff">{{actionTitle}}</a>
+
+            <td style="text-align:center;font-family:bold;font-size:30px;">
+                {{actionTitle}}
             </td>
         </tr>
     </table>
